fixed alignment of buttons and mood journal

--- a/ctfo_client/src/Components/styles/HomePage.css
+++ b/ctfo_client/src/Components/styles/HomePage.css
@@ -37,6 +37,10 @@ h1 {
   height: auto;
 }
 
+ .button {
+   font-family: 'Varela Round', sans-serif;
+ }
+
 /* MoodSelected */
 
 .mood-selected {
@@ -176,6 +180,11 @@ and (max-device-width : 568px) {
     left: 0;
   }
 
+  #button-container {
+    margin-left: 35px;
+    margin-top: 35px;
+  }
+
   h1 {
     font-size: 20px;
     margin-top: 30px;
@@ -194,6 +203,10 @@ and (max-device-width : 568px) {
 
   .close-modal-window {
     font-size: 30px;
+  }
+
+  .DayPicker-Month {
+    margin-left: 50px;
   }
 
 }
@@ -228,6 +241,17 @@ and (orientation : portrait) {
     width: 90%;
     padding: 10px;
     left: 0;
+    margin-top: 30px;
+  }
+
+  .button {
+    padding: inherit;
+    width: auto;
+    height: auto;
+  }
+
+  #button-container {
+    margin-top: 80px;
   }
 
 }
